[package]
name = "turbo-updater"
version = "0.1.0"
edition = "2021"
description = "Minimal wrapper around update-informer to provide npm registry support and consistent UI"
license = "MPL-2.0"
publish = false

[dependencies]
atty = "0.2"
console = "0.15.5"
semver = "1.0"
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0"
update-informer = { git = "https://github.com/mgrachev/update-informer", rev = "b7a415ac2276e857167b9fe8282044f93155878a", default_features = false, features = [
  "reqwest",
] }
