[package]
name = "turbopack-ecmascript-plugins"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[features]
default = ["swc_ecma_transform_plugin"]
transform_emotion = []
# [NOTE]: Be careful to explicitly enable this only for the supported platform / targets.
swc_ecma_transform_plugin = [
  "swc_core/plugin_transform_host_native",
  "swc_core/plugin_transform_host_native_shared_runtime",
]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

turbo-tasks = { workspace = true }
turbo-tasks-fs = { workspace = true }
turbopack-core = { workspace = true }
turbopack-ecmascript = { workspace = true }

modularize_imports = { workspace = true }
styled_components = { workspace = true }
styled_jsx = { workspace = true }
swc_common.workspace = true
swc_core = { workspace = true, features = ["ecma_ast", "ecma_visit", "common"] }
swc_ecma_ast = { workspace = true, features = ["rkyv", "rkyv-impl"] }
swc_ecma_transforms_base.workspace = true
swc_ecma_utils = "0.124.23"
swc_ecma_visit.workspace = true
swc_emotion = { workspace = true }
swc_relay = { workspace = true }

[build-dependencies]
turbo-tasks-build = { workspace = true }
