[package]
name = "turbopack-postcss"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[lib]
bench = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }

turbo-tasks = { workspace = true }
turbo-tasks-fs = { workspace = true }
turbopack = { workspace = true }
turbopack-core = { workspace = true }
turbopack-node = { workspace = true }

[build-dependencies]
turbo-tasks-build = { workspace = true }
