[package]
name = "swc-ast-explorer"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"

# don't publish this crate (for now)
publish = false

[[bin]]
name = "swc-ast-explorer"
path = "src/main.rs"
bench = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
owo-colors = { workspace = true }
regex = { workspace = true }
swc = { workspace = true }
swc_common = { workspace = true }
swc_ecma_ast = { workspace = true }
swc_ecma_parser = { workspace = true }
