[package]
name = "turborepo-analytics"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
futures.workspace = true
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "time"] }
tracing = { workspace = true }
turborepo-api-client = { workspace = true }
turborepo-vercel-api = { workspace = true }
uuid = { version = "1.5.0", features = ["v4"] }
