[package]
name = "turborepo-auth"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
axum-server = { workspace = true }
axum.workspace = true
hostname = "0.3.1"
reqwest.workspace = true
serde.workspace = true
thiserror = "1.0.38"
tokio.workspace = true
tracing.workspace = true
turborepo-api-client = { workspace = true }
turborepo-ui.workspace = true
turborepo-vercel-api-mock = { workspace = true }
webbrowser = { workspace = true }

[dev-dependencies]
port_scanner = { workspace = true }
