[package]
name = "turborepo-auth"
version = "0.1.0"
edition = { workspace = true }
license = "MIT"

[lints]
workspace = true

[dependencies]
chrono.workspace = true
hostname = "0.3.1"
rand.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio.workspace = true
tracing.workspace = true
turbopath.workspace = true
turborepo-ai-agents = { workspace = true }
turborepo-api-client = { workspace = true }
turborepo-dirs = { version = "0.1.0", path = "../turborepo-dirs" }
turborepo-ui.workspace = true
turborepo-vercel-api = { workspace = true }
url = { workspace = true }
webbrowser = { workspace = true }

[dev-dependencies]
http = "1.1.0"
httpmock = { workspace = true }
insta = { workspace = true }
port_scanner = { workspace = true }
tempfile = { workspace = true }
turborepo-vercel-api-mock = { workspace = true }
