[package]
name = "turborepo-cache"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
native-tls = ["turborepo-api-client/native-tls"]
rustls-tls = ["turborepo-api-client/rustls-tls"]


[dev-dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
libc = "0.2.146"
tempfile = { workspace = true }
test-case = { workspace = true }

[dependencies]
base64 = "0.21.0"
bytes.workspace = true
camino = { workspace = true }
chrono = { workspace = true }
dunce = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
os_str_bytes = "6.5.0"
path-clean = { workspace = true }
petgraph = "0.6.3"
ring = "0.16.20"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tar = "0.4.38"
thiserror = { workspace = true }
tracing = { workspace = true }
turbopath = { workspace = true }
turborepo-api-client = { workspace = true }
zstd = "0.12.3"
