[package]
name = "turborepo-ci"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }

[dev-dependencies]
test-case = "3.1.0"
tracing = { workspace = true }
