[package]
name = "turborepo-config"
version = "0.1.0"
edition = { workspace = true }
license = "MIT"

[lints]
workspace = true

[dependencies]
# Workspace dependencies
atty = { workspace = true }
biome_deserialize = { workspace = true }
biome_deserialize_macros = { workspace = true }
camino = { workspace = true }
clap = { workspace = true, features = ["derive"] }
derive_setters = { workspace = true }
itertools = { workspace = true }
merge = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
reqwest = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Non-workspace dependencies (not in workspace.dependencies)
convert_case = "0.6.0"
struct_iterable = "0.1.1"

# Turborepo crates
turbopath = { workspace = true }
turborepo-api-client = { path = "../turborepo-api-client" }
turborepo-auth = { path = "../turborepo-auth" }
turborepo-cache = { path = "../turborepo-cache" }
turborepo-ci = { workspace = true }
turborepo-dirs = { path = "../turborepo-dirs" }
turborepo-errors = { workspace = true }
turborepo-repository = { path = "../turborepo-repository" }

[dev-dependencies]
pretty_assertions = { workspace = true }
